--- a/PrabhaRaja/src/app/poem-read-view/poem-read-view.component.html
+++ b/PrabhaRaja/src/app/poem-read-view/poem-read-view.component.html
@@ -1,4 +1,4 @@
-<div class="backdrop" (click)="onClose()"></div>
+<div class="backdrop" ></div>
 <div class="alert-box"  *ngIf="!loading">
     <div>
         <mat-card class="example-card">
