--- a/PrabhaRaja/src/app/app.component.html
+++ b/PrabhaRaja/src/app/app.component.html
@@ -1,2 +1,5 @@
 <!-- <app-main-page></app-main-page> -->
-<router-outlet></router-outlet>
+<div  *ngIf="!loaded" style="display: flex;justify-content: center;"> 
+    <app-spinner></app-spinner>
+</div>
+<router-outlet *ngIf="loaded"></router-outlet>
