--- a/PrabhaRaja/src/app/poem-read-view/poem-read-view.component.css
+++ b/PrabhaRaja/src/app/poem-read-view/poem-read-view.component.css
@@ -16,6 +16,8 @@
     width: 60vw;
     padding: 16px;
     z-index: 100;
+    background-color: white;
+    opacity: 0.9;
     /* max-width: 500px; */
     /* background: white;
     box-shadow: 0 2px 8px rgba(0,0,0,0.26); */
