--- a/PrabhaRaja/src/app/about-me/about-me.component.html
+++ b/PrabhaRaja/src/app/about-me/about-me.component.html
@@ -2,7 +2,7 @@
     <app-spinner></app-spinner>
 </div>
 <div *ngIf="!loading" 
-style="background-image: linear-gradient(45deg, black, #ffbdbd);min-width: 686px;">
+style="min-width: 686px;opacity: 0.9;">
     <!-- <button (click)="onSave()">Save</button> -->
     <button mat-fab style="position: fixed;top: 8px;right: 8px;color: white;z-index: 1;" routerLink="/">
     <mat-icon>home</mat-icon>
