--- a/PrabhaRaja/src/app/shared/spinner/spinner.component.css
+++ b/PrabhaRaja/src/app/shared/spinner/spinner.component.css
@@ -15,7 +15,7 @@
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    background: #3f51b5;
+    background: white;
     margin: -4px 0 0 -4px;
   }
   .lds-roller div:nth-child(1) {
