--- a/PrabhaRaja/src/app/poem-read-view/poem-read-view.component.html
+++ b/PrabhaRaja/src/app/poem-read-view/poem-read-view.component.html
@@ -24,6 +24,19 @@
                         <mat-icon>favorite</mat-icon>
                         </button>
                     <span style="width: 8px;display: inline-flex;"></span>
+                    <button mat-fab [matMenuTriggerFor]="menu" color="primary" (click)=getUrl(poem.Id)>
+                        <mat-icon>share</mat-icon>
+                        </button>
+                        <mat-menu #menu="matMenu">
+                            <share-button [url]="url" button="whatsapp"></share-button>
+                            <share-button [url]="url" button="facebook"></share-button>
+                            <share-button [url]="url" button="twitter"></share-button>
+                            <share-button [url]="url" button="linkedin"></share-button>
+                            <share-button [url]="url" button="email"></share-button>
+                            <share-button [url]="url" button="messenger"></share-button>
+                            <share-button [url]="url" button="telegram"></share-button>
+                            <share-button [url]="url" button="sms"></share-button>
+                        </mat-menu>
                 </mat-card-actions>
             </mat-card>
         </div>
